--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^6.5.3",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.31.0",
+    "shortid": "^2.2.16",
     "uuid": "^9.0.0",
     "winston": "^3.8.2",
     "yup": "^0.32.11"
