--- a/config/config.env
+++ b/config/config.env
@@ -1,4 +1,4 @@
 PORT=4000
-MONGO_URI="mongodb://localhost/matnoGram"
+MONGO_URI="mongodb://localhost/matnoGram_db"
 JWT_SECRET = 45dfdjnd5f1d
 API ="http://localhost:4000"
