--- a/config/config.env
+++ b/config/config.env
@@ -1,6 +1,6 @@
 PORT=4000
-MONGO_URI="mongodb://localhost/maatnoGram_db"
-JWT_SECRET = 45dfdjnd5f1d
-API ="http://localhost:4000"
-POSTADDRESS="http://localhost:4000/uploads/post/"
-PROFILEADDRESS="http://localhost:4000/uploads/profile/"
+MONGO_URI=mongodb://mongo_db/maaatnoGram_db
+JWT_SECRET=45dfdjnd5f1d
+API=http://localhost:4000
+POSTADDRESS=http://localhost:4000/uploads/post/
+PROFILEADDRESS=http://localhost:4000/uploads/profile/
