--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env NODE_ENV=production node index",
-    "dev": "cross-env NODE_ENV=development  nodemon index.js"
+    "start": " node index",
+    "dev": " nodemon index.js"
   },
   "dependencies": {
     "app-root-path": "^3.1.0",
@@ -14,7 +14,6 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "connect-mongo": "^4.6.0",
-    "cross-env": "^7.0.3",
     "debug": "^4.3.4",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
